--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2 - Setup Java 17 
+      # Step 2 - Setup Java 17
       - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
@@ -44,6 +44,8 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
+            sudo systemctl stop eatyaar
+            rm -f /opt/eatyaar/eatyaar.jar
             mv /opt/eatyaar/*.jar /opt/eatyaar/eatyaar.jar
-            sudo systemctl restart eatyaar
+            sudo systemctl start eatyaar
             echo "✅ Deployed successfully"
