setup secrets and email service

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,3 +10,16 @@ spring.jpa.show-sql=false
 # JWT
 jwt.secret=eatyaar_super_secret_jwt_key_change_this_in_production
 jwt.expiration=604800000
+
+# SMTP Server Configuration
+spring.mail.host=smtp.hostinger.com
+spring.mail.port=465
+spring.mail.username=oryson@kattody.com
+spring.mail.password=jT^8i=xY
+
+# SMTP Properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
