--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,29 +3,25 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # triggers on every push to main
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1 - Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2 - Setup Java 17
       - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Step 3 - Build JAR with Maven
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      # Step 4 - Copy JAR to EC2
       - name: Copy JAR to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -36,7 +32,6 @@ jobs:
           target: "/opt/eatyaar/"
           strip_components: 1
 
-      # Step 5 - Restart app on EC2
       - name: Deploy on EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -44,8 +39,18 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            sudo systemctl stop eatyaar
-            rm -f /opt/eatyaar/eatyaar.jar
+            # Write all secrets into the env file on EC2
+            cat > /opt/eatyaar/.env << EOF
+            DB_USERNAME=${{ secrets.DB_USERNAME }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            MAIL_PASSWORD=${{ secrets.MAIL_PASSWORD }}
+            MAIL_TEST_RECIPIENT=${{ secrets.MAIL_TEST_RECIPIENT }}
+            EOF
+
+            # Rename JAR
             mv /opt/eatyaar/*.jar /opt/eatyaar/eatyaar.jar
-            sudo systemctl start eatyaar
+
+            # Restart app
+            sudo systemctl restart eatyaar
             echo "✅ Deployed successfully"
