--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,6 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            # Write all secrets into the env file on EC2
             cat > /opt/eatyaar/.env << EOF
             DB_USERNAME=${{ secrets.DB_USERNAME }}
             DB_PASSWORD=${{ secrets.DB_PASSWORD }}
@@ -48,9 +47,12 @@ jobs:
             MAIL_TEST_RECIPIENT=${{ secrets.MAIL_TEST_RECIPIENT }}
             EOF
 
-            # Rename JAR
-            mv /opt/eatyaar/*.jar /opt/eatyaar/eatyaar.jar
+            # Remove old JARs first
+            rm -f /opt/eatyaar/eatyaar.jar
+            rm -f /opt/eatyaar/*.jar.old
 
-            # Restart app
+            # Rename new JAR
+            mv /opt/eatyaar/eatyaar-0.0.1-SNAPSHOT.jar /opt/eatyaar/eatyaar.jar
+
             sudo systemctl restart eatyaar
             echo "✅ Deployed successfully"
