fix: website url in readme

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -23,3 +23,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.servlet.multipart.max-request-size=1MB
+spring.servlet.multipart.max-file-size=1MB
+server.tomcat.max-http-form-post-size=1MB
