--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,8 @@ mail.test.recipient=${MAIL_TEST_RECIPIENT}
 # App
 # ===========================
 spring.application.name=eatyaar
+
+
+spring.servlet.multipart.max-request-size=1MB
+spring.servlet.multipart.max-file-size=1MB
+server.tomcat.max-http-form-post-size=1MB
